Fix button text colour in dark mode

--- a/_sass/styles-dark.scss
+++ b/_sass/styles-dark.scss
@@ -9,7 +9,11 @@ a, a:active, a:visited, a:hover {
 }
 
 .text-black {
-  color: white !important;
+	color: white !important;
+}
+
+button.btn-primary {
+	color: white !important;
 }
 
 
